data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_472.wast
;; 3. **Test Description**: Create a `loop` where the block type does not match the loop’s operand stack requirements. This test should check if the stack is correctly managed and whether the loop exits or gets stuck.    **Constraint**: Validating the operand stack unwinding and block type matching.    **Infinite Loop Relevance**: Prevents operand stack mismanagement from causing infinite loops.

(assert_invalid
  (module
    (func $loop-stack-mismatch
      (i32.const 1)
      (loop (result f32)
        (f32.const 2.0)
        br 0
      )
    )
  )
  "type mismatch"
)